Addition Model khu1 khu2 khu3 khu4

--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,17 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+
 # C extensions
 *.so
 
 # Distribution / packaging
 #
+#
+Set5/
+Set14/
+B100/
+Urban100/
 DIV2K/
 .Python
 env/
